syntax = "proto3";

package protocol;

option go_package = "./protocol";

message ReferenceEnvelope {
  int32 reference_type = 1;
  bytes payload = 2;
  bool is_done = 3;
}
